# python_web

./: README.md  addressbook.pkl
goit-algo-hw-01/: CLI_UML_RK.drawio  CLI_UML_RK.drawio.html  index.html  task_1.py
goit-algo-hw-02/: Dockerfile  README.md  pyproject.toml  task_1.py  task_2.py
goit-algo-hw-03/: task_2.py
goit-algo-hw-04/: Dockerfile  main.py  pyproject.toml
goit-algo-hw-05/: main.py
goit-algo-hw-06/: data_base.sql  db_filldata.py  hm6_v.1  query_1.py  query_10.py  query_2.py  query_3.py  query_4.py  query_5.py  query_6.py  query_7.py  query_8.py  query_9.py
test_envirement/django/: pyproject.toml
test_envirement/django/mysite/: db.sqlite3
test_envirement/django/mysite/mysite/: settings.py
test_envirement/django/mysite/polls/: urls.py  views.py
test_envirement/django/mysite/polls/migrations/: 0001_initial.py
test_envirement/django/mysite/polls/templates/polls/: index.html
test_envirement/django/notes/noteapp/: forms.py  urls.py  views.py
test_envirement/django/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py  0003_alter_tag_name.py
test_envirement/django/notes/noteapp/templates/noteapp/: base.html  detail.html  index.html
test_envirement/django/notes/notes/: settings.py
test_envirement/django/notes/users/: forms.py  models.py  views.py
test_envirement/django/notes/users/migrations/: 0001_initial.py
test_envirement/scrapping/: pyproject.toml
test_envirement/scrapping/test_spyder/test_spyder/: settings.py
test_envirement/scrapping/test_spyder/test_spyder/spiders/: authors.py
(+186 files in other folders)
