[tool.poetry]
name = "test_django"
version = "0.1.0"
description = "test_django"
authors = ["MARVRK <155836501+MARVRK@users.noreply.github.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
